tests/ui/relative_path.rs
use include_json::include_json;

fn main() {
    let _ = include_json!("tests/relativepath.json");
}
